# playsouthwales

./: .gitignore  .prettierignore  AGENTS.md  CODEOFCONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SETUP.md  app.py  design.md  docker-compose.yml  events.json  events.py  package-lock.json  package.json  requirements.txt  skills-lock.json  testData.py  vercel.json
backend/: .dockerignore  .env.example  Dockerfile  Procfile  README.md  app.py  auth.py  config.py  empty.py  main.py  models.py  pyproject.toml  requirements.txt  ruff.toml  seed.py  utils.py
backend/app/: README.md  __init__.py  auth.py  config.py  dependencies.py  exceptions.py  lifespan.py  main.py  models.py  routes.py  scheduler.py  supabase_client.py  types.json  utils.py
backend/app/data/: championships.json  regs.json  sets.json  top20.json
backend/app/integrations/: discord.py
backend/app/routers/: protected.py  public.py
backend/app/services/: __init__.py  championship_scraper.py  championships_scraper.py  event.py  event_service.py  event_type_map.json  exceptions.py  leaderboard.py  leaderboard_service.py  league.py  league_service.py  pokedata_sync.py  sets_scraper.py  top20_data.py  top20_scraper.py
backend/app/web/: championship_scraper.py  championship_series.py  pokedata.py  pokedata_scraper.py  sets_releases.py  sets_scraper.py  (+1 more)
backend/data/: registered-names.json  top20.json
backend/instance/: site.db
backend/tests/: conftest.py  test_championship.py  test_championship_scraper.py  test_pokedata.py  test_pokedata_scraper.py  test_protected.py  test_public.py  test_routes.py
(+395 files in other folders)
